--- a/trunk/of/app/views/partials/_login.rhtml
+++ b/trunk/of/app/views/partials/_login.rhtml
@@ -2,10 +2,7 @@
 <% if(login?) -%>
   <%# = lightbox_link_to "Link Name", url_for(:controller => :images, :action => "image", :id => current_user.icon) %> 
   <%# = lightbox_image_tag(url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24), url_for(:controller => :images, :action => "image", :id => current_user.icon), {:class=>"images"}, :title => "This is a test!") %>
-  <a href="<%= url_for(:controller => :user, :action => "home") %>">
-  <img src="<%= url_for(:controller => :images,
-                :action => "image", :id => current_user.icon, :size => 24) %>" align="middle"/>
-  </a>
+  <%= user_portrait_link current_user,:size => 24, :align => :middle%>
   <%= _("Welcome")%>!
   &nbsp;
   <%= link_to current_user.login, :controller => :user, :action => :home %>
