--- a/trunk/of/app/views/releases/download.rhtml
+++ b/trunk/of/app/views/releases/download.rhtml
@@ -8,7 +8,7 @@
     <% @files = release.fileentity %>
     <% @files.each do |file| %>
     <tr>
-      <td><h2><%= link_to h(file.name), download_url(:project_name => @project_name, 
+      <td><h2><%= link_to h(file.path), download_url(:project_name => @project_name, 
 					       :release_version => release.version,
 					       :file_name => file.path ) %></h2>
       <%= "#{number_to_human_size(file.size)}, " + _("TODO:下載次數 ") + file.file_counter.to_s %><br>
