--- a/trunk/of/app/views/user/my_projects.rhtml
+++ b/trunk/of/app/views/user/my_projects.rhtml
@@ -14,14 +14,14 @@
   <% i = 1 - i -%>
   <% if i == 1; class_name="odd"; else; class_name="even"; end; -%>
   <tr class="item_h <%=class_name%>">
-    <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><%= h(project.summary) %></a></td>
+    <td><a href="<%= project_url(project.id) %>"><%= h(project.summary) %></a></td>
     <td align="center"><%= h tz_date(project.created_at) %></td>
     <td align="center"><%= h tz_date(project.updated_at) %></td>
     <td align="center"><%= h project.project_counter %></td>
   </tr>
   <tr class="item_b <%=class_name%>">
     <td colspan="3">
-      <a href="<%= url_for(:action => 'show', :id => project.id) %>">
+      <a href="<%= project_url(project.id) %>">
         <img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon, :size => 64) %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
       </a>
       <%= h project.description.chars[0..150] + "..." %><br/>
@@ -35,4 +35,4 @@
 <br />
 
 <%= link_to _('New project'), :action => 'new' %>
-</div>
+</div> 
