--- a/trunk/of/app/views/partials/_top_menu_data.rhtml
+++ b/trunk/of/app/views/partials/_top_menu_data.rhtml
@@ -27,7 +27,7 @@ var menudata=
         {id:'<%=_('menu_Preference')%>', url:'/user/edit'},
         {id:'<%=_('menu_Password')%>', url:'/user/change_password'},
         {id:'<%=_('menu_My Pages')%>', url:'/user/home'},
-        {id:'<%=_('menu_My Projects')%>', url:'m1s1ur2'},
+        {id:'<%=_('menu_My Projects')%>', url:'/user/my_projects'},
         {id:'<%=_('menu_My Tickets')%>', url:'',
           submenu:[
             {id:'<%=_('Owner')%>', url:'/rt/owner'},
