--- a/trunk/of/app/views/partials/_project_menu.rhtml
+++ b/trunk/of/app/views/partials/_project_menu.rhtml
@@ -36,7 +36,7 @@ Event.observe(window, 'load', project_leftmenu_init);
           </ul>
       </li>
       <li><%=link_to _('Mailing List'), sympa_project_path(:id => project.id)%></li>
-      <li><%= _('Downloads') %></li>
+      <li><%= link_to _('Downloads'), download1_path(:project_id => project.id) %></li>
   </ul>
   <%# if permit?("admin of :project") -%>
   <ul id="project_admin_menu">
