--- a/trunk/of/app/views/releases/_most_popular.rhtml
+++ b/trunk/of/app/views/releases/_most_popular.rhtml
@@ -2,7 +2,7 @@
 <ul>
   <%for download in downloadList %>
     <li>
-      <%= link_to h(download.project.summary + " " + download.name), "/projects/#{download.project_id}/releases/#{download.id}" %>
+      <%= link_to h(download.project.summary + " " + download.version), download1_path(:project_id => download.project_id) + "##{download.version}" %>
     </li>
   <%end %>
 </ul>
