--- a/trunk/of/app/views/site_admin/project/change_status_form.rhtml
+++ b/trunk/of/app/views/site_admin/project/change_status_form.rhtml
@@ -1,3 +1,5 @@
+<%= error_messages_for 'bad_project', :object_name => 'project' %>
+
 <h1>Change status</h1>
 Current status is: <%= Project.status_to_s(@project.status) %>
 <p>
