--- a/trunk/of/app/views/news/list.rhtml
+++ b/trunk/of/app/views/news/list.rhtml
@@ -8,7 +8,7 @@
   <%for news in @news %>
   <li>
     <%if news.catid == 0%>
-	  <%= link_to h(news.subject), {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %>
+	  <%= link_to h(news.subject), site_news1_path(:id => news), :class => "news_subject" %>
     <%else%>
       <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid), :class => "news_subject" %>
     <%end%>
@@ -22,7 +22,11 @@
       <% else %>
 	      <%=_('Disabled')%>
       <% end %>
-      <%= link_to _('Edit'), :action => 'edit', :id => news %>
+      <%if news.catid == 0%>
+        <%= link_to _('Edit'), edit_site_news1_path(:id => news) %>
+      <%else%>
+        <%= link_to _('Edit'), edit_news1_path(:id => news, :project_id => news.catid) %>
+      <%end%>
       <%= link_to _('Delete'), { :action => 'destroy', :id => news }, :confirm => _('todo確定要刪除嗎?'), :method => :delete %>
     </p>
     <% end %>
