--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -24,7 +24,7 @@
   _("Project|Contactinfo"), (h @project.contactinfo),
   _("Project|Maturity"), (h @project.maturity_to_s),
   _("Project|License"), @project.licenses_to_s.map {|i_s| link_to i_s[1], :action => :index, :cat => "license", :name => i_s[0] }.join("<br>\n"),
-  _("Project|Contentlicense"), @project.content_licenses_to_s.map {|i_s| link_to i_s[1], :action => :index, :cat => "contentlicense", :name => i_s[0] }.join("<br>\n"),
+  _("Project|Contentlicense"), @project.content_licenses_to_s.map {|i_s| link_to i_s[1] + " " + cc_images(i_s[0]), :action => :index, :cat => "contentlicense", :name => i_s[0] }.join("<br>\n"),
   _("Project|Licensingdescription"), (h @project.licensingdescription),
   _("Project|Platform"), (h show_with_seperator(@project.platform)),
   _("Project|Programminglanguage"), (h show_with_seperator(@project.programminglanguage)),
