--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -33,7 +33,7 @@
   _("Project|Programminglanguage"), (h show_with_seperator(@project.programminglanguage)),
   _("Project|Vcs"), (h @project.vcs_to_s),
   _("Project|Vcsdescription"), (h @project.vcsdescription),
-  _("Project|Creator"), ((u = User.find_by_id(@project.creator)) ? u.login + " " +  user_portrait_link(u) : ""),
+  _("Project|Creator"), ((u = User.find_by_id(@project.creator)) ? user_portrait_link(u, :with_login => true) : ""),
   _("Project|Created at"), tz_datetime(@project.created_at)
   )
 %>
