--- a/trunk/of/app/views/partials/_toua.rhtml
+++ b/trunk/of/app/views/partials/_toua.rhtml
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend> <%= _('Term of Use Agreement') %> </legend>
+  <legend> <%= _('Terms of Use Agreement') %> </legend>
   <% form_tag submit_to do %>
     <textarea style='height:300px; width:100%' readonly=true>
       <% File.open(file_path, 'r').each do |line| %>
